# ChangeLog for sci-mathematics/octave
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.80 2010/01/12 13:41:48 markusle Exp $

*octave-3.2.3-r1 (12 Jan 2010)

  12 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  +octave-3.2.3-r1.ebuild:
  New revision pulls in sci-libs/qrupdate so everybody gets fast QR & Cholesky
  updating functions.

*octave-3.2.3 (04 Nov 2009)

  04 Nov 2009; Markus Dittrich <markusle@gentoo.org> +octave-3.2.3.ebuild:
  Version bump (fixes #291560).

  04 Nov 2009; Markus Dittrich <markusle@gentoo.org> octave-3.2.0.ebuild:
  Added arpack to list of sparse matrix dependencies (#277171).

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> octave-3.0.3.ebuild:
  Stable for HPPA (bug #245707).

  27 Sep 2009; nixnut <nixnut@gentoo.org> octave-3.0.3.ebuild:
  ppc stable #245707

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> octave-2.1.57-r1.ebuild,
  octave-2.1.69.ebuild, octave-2.1.72.ebuild, octave-2.1.73.ebuild,
  octave-2.1.73-r1.ebuild, octave-2.1.73-r2.ebuild:
  Remove virtual/libc

  09 Sep 2009; Markus Dittrich <markusle@gentoo.org> octave-3.2.0.ebuild,
  +files/octave-3.2.0-dlmwrite.patch:
  Fixed typo in dlmwrite (bug #283315).

  10 Jul 2009; Markus Dittrich <markusle@gentoo.org> octave-3.2.0.ebuild:
  Disable linking against arpack until it can be made a dependency
  (pending keywording on relevant arches). Also split off src_configure()
  according to EAPI2.

  10 Jul 2009; Markus Dittrich <markusle@gentoo.org> octave-3.2.0.ebuild,
  +files/octave-3.2.0_as_needed.patch:
  Added patch for to fix as-needed trouble related to missing pthread
  symbols (fixes bug #277068). Thanks much to Martin Väth
  <vaeth@mathematik.uni-wuerzburg.de> for the patch.

  08 Jul 2009; Markus Dittrich <markusle@gentoo.org>
  -files/octave-3.0.1-add_syspath.patch, -files/octave-3.0.1-chi2rnd.patch,
  -files/octave-3.0.1-test-fix.patch, -octave-3.0.2.ebuild,