@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX octave-2.1.72-gcc4.1-gentoo.patch 4224 RMD160 d179b48f2e47e0e9b2312b3b21cc625ecaeb2e9a SHA1 54da4d74cb5d172310de64fc6cc9e32d56823e82 SHA256 24f0ccb8c2aa4004bd251f0095b8a83417f320326ba99a0bba46f8b178722a66
 AUX octave-2.1.73-f2c-fix.patch 419 RMD160 3f8768b9073bcd2d93a5c6064d518299ad0b86a6 SHA1 3c4ee31b5d85d1d8c5f523f39ea25a4a2e577b0d SHA256 18c29afa2402e562cf11ac5a0c7718ed5c9713846dfd0245b2930aaa1939fa41
 AUX octave-2.1.73-gcc-4.3.patch 8087 RMD160 b2d9bbb8f012b6fe9106594394627fd76f112ef9 SHA1 fb5407e628ed4ecbb1ab5c0bb43a595ca2e7bbb1 SHA256 d4a080e57562163c36ab435ba09a94fa4e748a9c91f700625706967e1c0092f6
@@ -15,8 +18,8 @@ DIST octave-2.1.69.tar.bz2 5818959 RMD160 88a59f0dfe4c343f011f78b07dbf069b03e29b
 DIST octave-2.1.72.tar.bz2 5808544 RMD160 b9a1056a98a524591b0f497f3c11ccc436a18eec SHA1 a696c65667a4a99d55279103065d1d0af5a5fb09 SHA256 d8b2dec9eb979c35be435896105c1c31dd61aa2c0f27be8b8b2645fa5d60bb90
 DIST octave-2.1.73.tar.bz2 5790133 RMD160 d34c6ecd8f84c728ad7687d9568b9d69ade6f5db SHA1 58221aa15fcefd66b03531ac0ae9b1d2356e7555 SHA256 8ccaee227c6cad3b5633a904414f17ce73de8eab2abd4d2e6a3972dd878ffbc3
 DIST octave-3.0.3.tar.bz2 10159024 RMD160 1a162862a457675e2d94de306c1ec8f1643c9e07 SHA1 5c619254521a5fe14b3ec8a6eecbf104f9fa41dc SHA256 f90108bf6a2f9930907aa740d1c4d39551985cf3b5c5eb5dfdb436e0d3b5d79d
-DIST octave-3.2.0.tar.bz2 12011861 RMD160 88935c2f560a7bc400d0ca182be0189b7c7df90c SHA1 3408483adcb55e991ac46349ec7aa626a4f63615 SHA256 10096d60aa4b85ea8478acdf20d65fed6bc38aecb5369181a50b00a9ebfee4d6
 DIST octave-3.2.3.tar.bz2 12085781 RMD160 30c1892544ba67054f1888758ebc2b1ede8848c0 SHA1 7a188ffd55ac1efb2f480fa2aed94e66d3596f34 SHA256 309b486825f0b576b7581344a4946bbd8c4cde75c32a2515ae0cfc09a7975fda
+DIST octave-3.2.4.tar.bz2 12080959 RMD160 6dcdea7ef2431b8427da5e6b9d2113e0e5736f43 SHA1 7de078564027108f3436f3ba7bf5993a6b411a67 SHA256 48471d05c7ed9c0a5a4d5fa4ae8a857447ac3da1197f86cfe79b9d8f4fdfd147
 EBUILD octave-2.1.57-r1.ebuild 3449 RMD160 629851ad2e5420b4071cf9aad6d6053f003a4740 SHA1 10aa80c87c893249b76189d4082f934a9e9df578 SHA256 219a9674d55e5cea4a3e91e9d81264509e28b65c3de88e1e7bda08c7da5cdef2
 EBUILD octave-2.1.69.ebuild 3420 RMD160 b6634585a939a0288a63050fa91e68eff3711f4a SHA1 0e4aeb41856301a16b275615b1397e58c3a68fc1 SHA256 5eda06d44181914cfc901a186d3f4df7281021ea45ab5f4c897966cdaf6c9bc6
 EBUILD octave-2.1.72.ebuild 3898 RMD160 fafafcc48747afb3da2fcdcdc81a2486b575f870 SHA1 5075942e83fd399cfe41c30f76ba2991d058be61 SHA256 e4cf3de05869ee88468f5b4435f6f25cff801eb18e95bfb0583144aeb02d7a63
@@ -24,8 +27,14 @@ EBUILD octave-2.1.73-r1.ebuild 4414 RMD160 214ba0c7d64fdfda139c8f3b90cf635d22386
 EBUILD octave-2.1.73-r2.ebuild 4593 RMD160 57768e35057cf967aad85d0be56f9381f6c35b9b SHA1 350720616d3ddbae4a337269f429a82704c1cd8c SHA256 88059be54c26282937ffdbab146661ca6d089520ec66457fc127793fe236b610
 EBUILD octave-2.1.73.ebuild 4254 RMD160 fedeb9bb23ddcc88b60ac4110975834b3e254d13 SHA1 b19e77a0ef495ae0e09e6b750f2307357e154db2 SHA256 121a531d99733d9b8e53f26574caf52dd1c3d34ab15ab2b981061ef9bf8b245c
 EBUILD octave-3.0.3.ebuild 2681 RMD160 b2b31461e4b4fa71b5d4a9cd3c7616f005165958 SHA1 3ccfbfca3c9c8c5d0c9ae81b9bf0f26118c696d1 SHA256 190ff7f058e1bfc39c267511a16f91cda59e718b4e457fdf90c1eb3dc63b729a
-EBUILD octave-3.2.0.ebuild 2522 RMD160 b9676c92b4ddabb88a1a602914ab495dfbcbd08d SHA1 66b062d573e5705908c8a5206b86a9be15f1af1e SHA256 43a60443d1dd8e42a0c25fa0933f321b88f6bf302d977c003bfaad5bdb4fe212
 EBUILD octave-3.2.3-r1.ebuild 2536 RMD160 b9442da3c0f33f283a7596270422f2b781bec945 SHA1 dc9322bf7b4325048fec3c30e6012bf10d787a97 SHA256 ebca43b4e626169da28f2c5b1afdc454bfe2636ba258f48f91d1810da70cd57d
-EBUILD octave-3.2.3.ebuild 2494 RMD160 4ca31e449ae4e62bbdd56b5ed0cac2573759f1ec SHA1 88850f29c2ab28cb2f55a87804550c712af324ba SHA256 a8aad5ab605e4af6a561e8c1dbeed17b63cdf0d60bb20d1ef9ff64ed47e36687
-MISC ChangeLog 21017 RMD160 91e0d366a174fdcb88f416e87ed35a1b79f3ced1 SHA1 2c699336c4ffcd28b07e05e7b9c5a1d23030b5a8 SHA256 b3a9a579053e61b71284935713c9f39f71373bfdca1804f054e356a26c256426
+EBUILD octave-3.2.4.ebuild 2730 RMD160 d9ef3541473adec71efec41ea4d102cd7133d0aa SHA1 f34b66cfeb631ef470079d918ddca7e38065304f SHA256 06a07682b3f3683c74eba9a895a408b566d7a338bd7ebc0cd338e604f9a5bc5f
+MISC ChangeLog 21399 RMD160 6a54988a3cfed7102c44510acb89cbcbe919f766 SHA1 edc8d955f5da7b44b95354c16d5461ec8149e600 SHA256 49184515d86c827795d5e41d83c644ba1fa3071572cdf4b08e2657e53a84130f
 MISC metadata.xml 260 RMD160 27a4292b758e1199d0092b731cba79033f1b4167 SHA1 9997a99a4d6115f3b901208ba711d735ce9be36e SHA256 5fda55fd44bfec5755e1c3ac828887c37f0eebed6b3b972454e123ac2472d3ff
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEUEARECAAYFAktmfkMACgkQ1ycZbhPLE2BVVQCgiNsf/ZWG09y0Ohf+ZsCOrRHf
+WNEAmPihJaUC+FJ6VvmbwlKQfu5wW9A=
+=WLsF
+-----END PGP SIGNATURE-----
