@@ -1,9 +1,9 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.2.0.ebuild,v 1.7 2009/11/04 11:05:01 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/octave-3.2.4.ebuild,v 1.1 2010/02/01 07:09:46 bicatali Exp $
 
 EAPI="2"
-inherit flag-o-matic fortran xemacs-elisp-common
+inherit flag-o-matic xemacs-elisp-common
 
 DESCRIPTION="High-level interactive language for numerical computations"
 LICENSE="GPL-3"
@@ -11,67 +11,71 @@ HOMEPAGE="http://www.octave.org/"
 SRC_URI="ftp://ftp.gnu.org/pub/gnu/${PN}/${P}.tar.bz2"
 
 SLOT="0"
-IUSE="emacs readline zlib doc hdf5 curl fftw xemacs sparse"
+IUSE="curl doc emacs fltk fftw hdf5 opengl readline sparse xemacs zlib"
 KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86"
 
-RDEPEND="virtual/lapack
-	dev-libs/libpcre
-	sys-libs/ncurses
-	sci-visualization/gnuplot
-	>=sci-mathematics/glpk-4.15
+# add 	media-gfx/graphicsmagick[cxx] when keyworded in arches
+RDEPEND="dev-libs/libpcre
 	media-libs/qhull
-	fftw? ( >=sci-libs/fftw-3.1.2 )
-	zlib? ( sys-libs/zlib )
-	hdf5? ( sci-libs/hdf5 )
+	sci-libs/qrupdate
+	sci-mathematics/glpk
+	sci-visualization/gnuplot
+	sys-libs/ncurses
+	virtual/lapack
+	x11-libs/libX11
 	curl? ( net-misc/curl )
-	xemacs? ( app-editors/xemacs )
-	sparse? ( sci-libs/umfpack
-		sci-libs/arpack
-		sci-libs/colamd
+	fltk? ( x11-libs/fltk:1.1[opengl?] )
+	fftw? ( sci-libs/fftw:3.0 )
+	hdf5? ( sci-libs/hdf5 )
+	opengl? ( virtual/opengl media-libs/ftgl )
+	sparse? ( sci-libs/arpack
 		sci-libs/camd
 		sci-libs/ccolamd
 		sci-libs/cholmod
-		sci-libs/cxsparse )
+		sci-libs/colamd
+		sci-libs/cxsparse
+		sci-libs/umfpack )
+	xemacs? ( app-editors/xemacs )
+	zlib? ( sys-libs/zlib )
 	!sci-mathematics/octave-forge"
 
 DEPEND="${RDEPEND}
 	virtual/latex-base
 	sys-apps/texinfo
 	|| ( dev-texlive/texlive-genericrecommended
-		app-text/ptex )
+		 app-text/ptex )
 	dev-util/gperf
 	dev-util/pkgconfig"
 
-FORTRAN="gfortran ifc g77 f2c"
-
 src_prepare() {
-	epatch "${FILESDIR}"/${P}_parallel_make.patch
-	epatch "${FILESDIR}"/${P}_as_needed.patch
-	epatch "${FILESDIR}"/${P}-dlmwrite.patch
+	epatch "${FILESDIR}"/${PN}-3.2.0_parallel_make.patch
+	epatch "${FILESDIR}"/${PN}-3.2.0_as_needed.patch
 }
 
 src_configure() {
+	use fltk || export FLTK_CONFIG=""
 	econf \
 		--localstatedir=/var/state/octave \
 		--enable-shared \
+		--with-qrupdate \
 		--with-blas="$(pkg-config --libs blas)" \
 		--with-lapack="$(pkg-config --libs lapack)" \
-		$(use_with hdf5) \
+		$(use_enable readline) \
 		$(use_with curl) \
-		$(use_with zlib) \
 		$(use_with fftw) \
+		$(use_with hdf5) \
+		$(use_with opengl framework-opengl) \
 		$(use_with sparse arpack) \
 		$(use_with sparse umfpack) \
 		$(use_with sparse colamd) \
 		$(use_with sparse ccolamd) \
 		$(use_with sparse cholmod) \
 		$(use_with sparse cxsparse) \
-		$(use_enable readline)
+		$(use_with zlib)
 }
 
 src_compile() {
 	emake || die "emake failed"
-
 	if use xemacs; then
 		cd "${S}/emacs"
 		xemacs-elisp-comp *.el
