@@ -1,6 +1,14 @@
 # ChangeLog for sci-mathematics/octave
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.80 2010/01/12 13:41:48 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/octave/ChangeLog,v 1.81 2010/02/01 07:09:46 bicatali Exp $
+
+*octave-3.2.4 (01 Feb 2010)
+
+  01 Feb 2010; Sébastien Fabbro <bicatali@gentoo.org> -octave-3.2.0.ebuild,
+  -octave-3.2.3.ebuild, +octave-3.2.4.ebuild:
+  Version bump. Pulled the science overlay version which included opengl and
+  fltk goodness. The automagic dependency on graphicsmagick still not depend
+  because of missing arches and imread is buggy with graphicsmagick-1.3.8.
 
 *octave-3.2.3-r1 (12 Jan 2010)
 
